Fixed ChirpSize overflow

--- a/src/Chirp.Web/wwwroot/css/style.css
+++ b/src/Chirp.Web/wwwroot/css/style.css
@@ -117,6 +117,7 @@ div.page ul.cheeps li {
     -moz-border-radius: 5px;
     -webkit-border-radius: 5px;
     min-height: 48px;
+    word-break: break-word;
 }
 
 div.page ul.cheeps li img {
